syntax = "proto3";

package login;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.chatapp.login";

service LoginService {

  rpc Login(LoginRequest) returns (ServerResponse);
  rpc Logout(common.GetRequest) returns (ServerResponse);
  rpc CreateAccount(LoginRequest) returns (ServerResponse);
}

message LoginRequest {

  string username = 1;
  string password = 2;
}

message ServerResponse {

  string token = 1;
  int32 response_code = 2;
}
